--- a/app/src/main/res/layout/activity_add_news.xml
+++ b/app/src/main/res/layout/activity_add_news.xml
@@ -10,52 +10,78 @@
         android:id="@+id/imageView"
         android:layout_width="0dp"
         android:layout_height="160dp"
-        android:layout_marginStart="68dp"
-        android:layout_marginEnd="68dp"
-        app:layout_constraintBottom_toTopOf="@+id/AddNewURL"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/ic_logo" />
 
     <EditText
         android:id="@+id/AddNewURL"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="316dp"
+        android:layout_marginTop="15dp"
         android:ems="10"
         android:hint="@string/url"
         android:inputType="text"
         android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="120dp"
+        android:layout_height="46dp"
+        android:text="@string/ingles"
+        app:layout_constraintHorizontal_bias="0.347"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/AddNewURL" />
 
     <Button
         android:id="@+id/AddNewBtn"
         android:layout_width="209dp"
         android:layout_height="47dp"
         android:text="@string/AddNews"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/AddNewURL"
-        app:layout_constraintVertical_bias="0.156" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox"/>
+
+    <EditText
+        android:id="@+id/AddNewTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:ems="10"
+        android:hint="@string/titulo"
+        android:inputType="text"
+        android:minHeight="48dp"
+        app:layout_constraintTop_toBottomOf="@+id/AddNewBtn"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
     <CheckBox
-        android:id="@+id/checkBox"
+        android:id="@+id/checkBoxTitle"
         android:layout_width="120dp"
         android:layout_height="46dp"
-        android:layout_marginTop="48dp"
-        android:text="Ingles"
-        app:layout_constraintBottom_toTopOf="@+id/AddNewBtn"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/ingles"
         app:layout_constraintHorizontal_bias="0.347"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/AddNewURL"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/AddNewTitle" />
+
+    <Button
+        android:id="@+id/AddNewBtnCamera"
+        android:layout_width="209dp"
+        android:layout_height="47dp"
+        android:text="@string/hacer_foto"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBoxTitle"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
